<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".IncomingCall">

    <RelativeLayout
        android:id="@+id/rl_user_info"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/colorPrimaryDark">


        <TextView
            android:id="@+id/tv_call_number_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_call_number"
            android:layout_marginBottom="74dp"
            android:gravity="center"
            android:text="@string/numero"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_call_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            tools:text="@string/telefono" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/tv_phone_calling_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/duracion"
            android:visibility="gone"
            tools:visibility="visible" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/tv_phone_hang_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/colgar"
                android:textColor="#E91627"
                app:drawableTopCompat="@drawable/ic_phone_hang_up"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_phone_pick_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_toEndOf="@id/tv_phone_hang_up"
                android:drawablePadding="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/contestar"
                android:textColor="#2E7D32"
                android:visibility="gone"
                app:drawableTopCompat="@drawable/ic_phone_pick_up"
                tools:visibility="visible" />
        </RelativeLayout>

    </RelativeLayout>
</LinearLayout>